--- a/members-detail.html
+++ b/members-detail.html
@@ -21,6 +21,12 @@
       font-weight: 600;
       text-transform: uppercase;
     }
+    .btn {
+      padding: 0.5rem 1rem;
+      border-radius: 0.5rem;
+      font-weight: 600;
+      transition: background-color 0.2s;
+    }
   </style>
 </head>
 
@@ -31,7 +37,7 @@
     <div class="flex items-center space-x-2">
       <a href="index.html" class="flex items-center space-x-2">
         <i data-feather="arrow-left" class="text-yellow-400"></i>
-        <h1 class="text-xl medieval-font">GuildPower Tracker Pro</h1>
+        <h1 class="text-xl medieval-font">GuildPower Tracker</h1>
       </a>
     </div>
   </nav>
@@ -42,31 +48,41 @@
       <div class="max-w-4xl mx-auto">
 
         <!-- Member Header -->
-        <div class="bg-gray-800 rounded-xl p-8 shadow-lg mb-8">
+        <div id="member-header" class="bg-gray-800 rounded-xl p-8 shadow-lg mb-8">
           <div class="flex flex-col md:flex-row items-center md:items-start space-y-6 md:space-y-0 md:space-x-8">
-            <img src="" alt="Member Avatar" class="w-32 h-32 rounded-full border-4 border-yellow-400">
+            <img id="member-avatar" src="" alt="Member Avatar" class="w-32 h-32 rounded-full border-4 border-yellow-400">
             <div class="flex-1 text-center md:text-left">
-              <h2 class="text-4xl font-bold mb-2 medieval-font">Member Name</h2>
-              <span class="class-badge bg-blue-500 text-white text-lg">Class</span>
+              <h2 id="member-name" class="text-4xl font-bold mb-2 medieval-font">Member Name</h2>
+              <span id="member-class" class="class-badge bg-blue-500 text-white text-lg">Class</span>
               <div class="mt-6 grid grid-cols-2 md:grid-cols-4 gap-4">
                 <div class="text-center">
                   <p class="text-gray-400">Current CP</p>
-                  <p class="text-2xl font-bold">0</p>
+                  <p id="member-cp" class="text-2xl font-bold">0</p>
                 </div>
                 <div class="text-center">
                   <p class="text-gray-400">Weekly Growth</p>
-                  <p class="text-2xl font-bold text-green-400">0</p>
+                  <p id="member-growth" class="text-2xl font-bold text-green-400">0</p>
                 </div>
                 <div class="text-center">
                   <p class="text-gray-400">Rank</p>
-                  <p class="text-2xl font-bold">#-</p>
+                  <p id="member-rank" class="text-2xl font-bold">#-</p>
                 </div>
                 <div class="text-center">
                   <p class="text-gray-400">Member Since</p>
-                  <p class="text-xl font-bold">Week 1</p>
+                  <p id="member-since" class="text-xl font-bold">Week 1</p>
                 </div>
               </div>
             </div>
+          </div>
+        </div>
+
+        <!-- Update/Delete Controls -->
+        <div class="bg-gray-800 rounded-xl p-6 shadow-lg mb-8">
+          <h3 class="text-xl font-bold mb-4">Update Combat Power</h3>
+          <div class="flex flex-col sm:flex-row gap-4">
+            <input id="update-cp-input" type="number" placeholder="Enter new CP" class="w-full px-4 py-2 rounded-lg bg-gray-700 focus:outline-none focus:ring-2 focus:ring-yellow-400">
+            <button id="update-cp-btn" class="btn bg-yellow-500 text-gray-900 hover:bg-yellow-400">Update</button>
+            <button id="delete-member-btn" class="btn bg-red-600 hover:bg-red-500">Delete</button>
           </div>
         </div>
 
@@ -91,151 +107,162 @@
                   <th class="text-left py-3">Rank</th>
                 </tr>
               </thead>
-              <tbody>
-                <!-- Rows dynamically populated -->
+              <tbody id="weekly-history-body">
+                <!-- Filled dynamically -->
               </tbody>
             </table>
           </div>
         </div>
 
-</div>
+      </div>
     </div>
   </section>
 
-  <!-- Update/Delete Buttons -->
-  <section class="py-6 container mx-auto px-6">
-    <div class="flex gap-4 justify-center">
-      <button id="updateCP" class="bg-yellow-500 hover:bg-yellow-600 text-gray-900 font-bold py-2 px-6 rounded-lg">Update CP</button>
-      <button id="deleteMember" class="bg-red-500 hover:bg-red-600 text-white font-bold py-2 px-6 rounded-lg">Delete Member</button>
-    </div>
-  </section>
+<!-- Firebase Logic & Chart -->
+    <script>
+      // Firebase config (same as index)
+      const firebaseConfig = {
+        apiKey: "AIzaSyDoim277EKmZDh0TnbZbK5OXy2GdVW-d84",
+        authDomain: "guildcombatpower.firebaseapp.com",
+        projectId: "guildcombatpower",
+        storageBucket: "guildcombatpower.firebasestorage.app",
+        messagingSenderId: "862355543279",
+        appId: "1:862355543279:web:e7d7c1b5ee1f3ba89f371a"
+      };
+      firebase.initializeApp(firebaseConfig);
+      const db = firebase.firestore();
+      const membersRef = db.collection('members');
 
-  <script>
-    // Firebase config
-    const firebaseConfig = {
-      apiKey: "AIzaSyDoim277EKmZDh0TnbZbK5OXy2GdVW-d84",
-      authDomain: "guildcombatpower.firebaseapp.com",
-      projectId: "guildcombatpower",
-      storageBucket: "guildcombatpower.firebasestorage.app",
-      messagingSenderId: "862355543279",
-      appId: "1:862355543279:web:e7d7c1b5ee1f3ba89f371a"
-    };
-    firebase.initializeApp(firebaseConfig);
-    const db = firebase.firestore();
-
-    // Get member ID from URL
-    function getQueryParam(param) {
       const urlParams = new URLSearchParams(window.location.search);
-      return urlParams.get(param);
-    }
-    const memberId = getQueryParam('id');
-    let memberData = null;
-
-    function renderMemberData(doc) {
-      if (!doc.exists) { alert("Member not found"); return; }
-      const m = doc.data();
-      memberData = m; // store globally
-
-      const h2 = document.querySelector('h2');
-      const img = document.querySelector('img');
-      const classBadge = document.querySelector('.class-badge');
-      if(h2) h2.textContent = m.name || "Unknown";
-      if(classBadge){
-        classBadge.textContent = m.class || "Unknown";
-        classBadge.className = 'class-badge ' + (m.classColor || 'bg-gray-500');
-      }
-      if(img) img.src = m.avatar || "https://via.placeholder.com/200";
-
-      const stats = document.querySelectorAll('.text-2xl.font-bold');
-      if(stats.length >= 4){
-        stats[0].textContent = (m.cp || 0).toLocaleString();
-        stats[1].textContent = ((m.growth||0)>=0?'+':'') + (m.growth||0).toLocaleString();
-        stats[2].textContent = '#' + (m.rank || '-');
-        stats[3].textContent = 'Week ' + ((m.weeklyCP && m.weeklyCP.length) || 1);
+      const memberId = urlParams.get('id');
+      if (!memberId) {
+        alert("No member selected.");
+        window.location.href = "index.html";
       }
 
-      const tbody = document.querySelector('tbody');
-      const weeklyData = (m.weeklyCP && m.weeklyCP.length) ? m.weeklyCP : [{week:'Week 1', cp:0, growth:0, rank:'-'}];
-      if(tbody){
-        tbody.innerHTML = weeklyData.map(w => `
-          <tr class="border-b border-gray-700">
-            <td class="py-3">${w.week}</td>
-            <td class="py-3 font-bold">${(w.cp||0).toLocaleString()}</td>
-            <td class="py-3 text-green-400">${(w.growth>=0?'+':'') + (w.growth||0).toLocaleString()}</td>
-            <td class="py-3">${w.rank || '-'}</td>
-          </tr>
-        `).join('');
-      }
+      // Elements
+      const nameEl = document.getElementById('member-name');
+      const classEl = document.getElementById('member-class');
+      const cpEl = document.getElementById('member-cp');
+      const growthEl = document.getElementById('member-growth');
+      const rankEl = document.getElementById('member-rank');
+      const sinceEl = document.getElementById('member-since');
+      const avatarEl = document.getElementById('member-avatar');
+      const weeklyBody = document.getElementById('weekly-history-body');
 
+      const updateBtn = document.getElementById('update-cp-btn');
+      const deleteBtn = document.getElementById('delete-member-btn');
+      const updateInput = document.getElementById('update-cp-input');
+
+      // Chart setup
       const ctx = document.getElementById('memberProgressChart').getContext('2d');
-      if(window.memberChart) window.memberChart.destroy();
-      window.memberChart = new Chart(ctx, {
-        type:'line',
+      const memberChart = new Chart(ctx, {
+        type: 'line',
         data: {
-          labels: weeklyData.map(w=>w.week),
-          datasets:[{
-            label:'Combat Power',
-            data: weeklyData.map(w=>w.cp||0),
-            borderColor:'#3b82f6',
-            backgroundColor:'rgba(59,130,246,0.1)',
-            tension:0.4,
-            fill:true
+          labels: [],
+          datasets: [{
+            label: 'Combat Power',
+            data: [],
+            borderColor: '#fbbf24',
+            backgroundColor: 'rgba(251,191,36,0.1)',
+            tension: 0.3,
+            fill: true
           }]
         },
-        options:{
-          responsive:true,
-          maintainAspectRatio:false,
-          plugins:{legend:{display:false}},
-          scales:{
-            y:{beginAtZero:false, grid:{color:'rgba(255,255,255,0.1)'}},
-            x:{grid:{color:'rgba(255,255,255,0.1)'}}
-          }
+        options: {
+          responsive: true,
+          scales: {
+            x: { grid: { color: 'rgba(255,255,255,0.1)' } },
+            y: { grid: { color: 'rgba(255,255,255,0.1)' } }
+          },
+          plugins: { legend: { display: false } }
         }
       });
 
-      feather.replace();
-    }
+      // Fetch & render member data
+      function loadMember() {
+        membersRef.doc(memberId).get().then(doc => {
+          if (!doc.exists) return alert("Member not found.");
+          const data = doc.data();
 
-    // Fetch member
-    if(memberId){
-      db.collection('members').doc(memberId).get()
-        .then(doc=>renderMemberData(doc))
-        .catch(err=>alert("Error fetching member: "+err));
-    } else alert("No member ID provided");
+          nameEl.textContent = data.name;
+          classEl.textContent = data.class;
+          classEl.className = `class-badge ${data.classColor} text-white text-lg`;
+          cpEl.textContent = data.cp.toLocaleString();
+          growthEl.textContent = (data.growth >= 0 ? "+" : "") + data.growth.toLocaleString();
+          growthEl.classList.toggle('text-green-400', data.growth >= 0);
+          growthEl.classList.toggle('text-red-400', data.growth < 0);
+          rankEl.textContent = data.rank ? "#" + data.rank : "-";
+          sinceEl.textContent = data.weeklyCP?.[0]?.week || "Week 1";
+          avatarEl.src = data.avatar || "https://i.imgur.com/I4Rku2cm.jpg";
 
-    // Update CP
-    document.getElementById('updateCP').addEventListener('click',()=>{
-      if(!memberData) return alert("Member data not loaded yet");
-      const newCP = prompt("Enter new CP:", memberData.cp || 0);
-      if(newCP!==null){
-        const cpVal = parseInt(newCP);
-        if(isNaN(cpVal)) return alert("Invalid number");
-        const growth = cpVal - (memberData.cp || 0);
-        const weekLabel = "Week " + ((memberData.weeklyCP?.length||0)+1);
-        const weeklyEntry = {week: weekLabel, cp: cpVal, growth: growth, rank: '-'};
+          // Weekly history table
+          weeklyBody.innerHTML = "";
+          data.weeklyCP?.forEach(entry => {
+            const row = document.createElement("tr");
+            row.className = "border-b border-gray-700";
+            row.innerHTML = `
+              <td class="py-2">${entry.week}</td>
+              <td class="py-2">${entry.cp.toLocaleString()}</td>
+              <td class="py-2 ${entry.growth >= 0 ? 'text-green-400' : 'text-red-400'}">
+                ${(entry.growth >= 0 ? "+" : "") + entry.growth.toLocaleString()}
+              </td>
+              <td class="py-2">${entry.rank || '-'}</td>
+            `;
+            weeklyBody.appendChild(row);
+          });
 
-        const updatedWeekly = memberData.weeklyCP ? [...memberData.weeklyCP, weeklyEntry] : [weeklyEntry];
+          // Chart update
+          const labels = data.weeklyCP.map(e => e.week);
+          const cpValues = data.weeklyCP.map(e => e.cp);
+          memberChart.data.labels = labels;
+          memberChart.data.datasets[0].data = cpValues;
+          memberChart.update();
+        });
+      }
 
-        db.collection('members').doc(memberId).update({
-          cp: cpVal,
+      loadMember();
+
+      // Update CP logic (with 4-week cap)
+      updateBtn.addEventListener('click', async () => {
+        const newCP = parseInt(updateInput.value);
+        if (isNaN(newCP)) return alert("Enter a valid number.");
+        const docSnap = await membersRef.doc(memberId).get();
+        if (!docSnap.exists) return alert("Member not found.");
+
+        const data = docSnap.data();
+        const oldCP = data.cp || 0;
+        const growth = newCP - oldCP;
+        let weekly = data.weeklyCP || [];
+
+        // Weekly entry
+        const weekNum = weekly.length ? parseInt(weekly[weekly.length - 1].week.split(" ")[1]) + 1 : 1;
+        const newEntry = { week: "Week " + weekNum, cp: newCP, growth: growth, rank: data.rank || "-" };
+        weekly.push(newEntry);
+
+        // 🔁 Keep only last 4 weeks
+        if (weekly.length > 4) weekly = weekly.slice(-4);
+
+        await membersRef.doc(memberId).update({
+          cp: newCP,
           growth: growth,
-          weeklyCP: updatedWeekly
-        }).then(()=>{
-          alert("CP updated");
-          db.collection('members').doc(memberId).get().then(doc=>renderMemberData(doc));
-        }).catch(err=>alert("Error updating CP: "+err));
-      }
-    });
+          weeklyCP: weekly
+        });
 
-    // Delete Member
-    document.getElementById('deleteMember').addEventListener('click',()=>{
-      if(confirm("Are you sure you want to delete this member?")){
-        db.collection('members').doc(memberId).delete()
-          .then(()=>{ alert("Member deleted"); window.location.href='index.html'; })
-          .catch(err=>alert("Error deleting member: "+err));
-      }
-    });
-  </script>
+        alert(`✅ CP Updated! Growth: ${growth >= 0 ? "+" : ""}${growth}`);
+        updateInput.value = "";
+        loadMember();
+      });
 
-</body>
+      // Delete Member
+      deleteBtn.addEventListener('click', async () => {
+        if (!confirm("Are you sure you want to delete this member?")) return;
+        await membersRef.doc(memberId).delete();
+        alert("🗑️ Member deleted!");
+        window.location.href = "index.html";
+      });
+
+      feather.replace();
+    </script>
+  </body>
 </html>
